# fitfile-hr-artifact-corrector

./: .gitignore  DEV_STATE.md  README.md  pyproject.toml
scripts/: batch_correct_optical.sh  correct_fit.sh  correct_to_fit.py  plot_hr_comparison.py  train_combined_mps.sh  train_seq_mps.sh
src/fitfile_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hf_corrector/: __init__.py  cli.py  corrector.py  detector.py  export.py  features.py  io_fit.py  mcp_server.py  model.py  qa.py  training.py  types.py
tests/: test_combined_training.py
